# obtainium-serverside

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
obtainium_serverside/: cli.py  http.py  models.py  planner.py
obtainium_serverside/providers/: __init__.py  base.py  github.py  loxone.py
tests/: test_github_provider.py  test_loxone_provider.py  test_planner.py
